--- a/common_navbar.jade
+++ b/common_navbar.jade
@@ -1,5 +1,5 @@
 mixin navbar_mixin(Title, NavItems)
-    nav(class="navbar navbar-default" data-spy="affix" data-offset-top="700")
+    nav(id ="work_navbar" class="navbar navbar-default" data-spy="affix" data-offset-top="700")
         .container
             .navbar-header
                 button(type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar")
