--- a/index.jade
+++ b/index.jade
@@ -33,7 +33,7 @@ html(lang="end")
             .row.headline
                 .col-sm-6
                     h1.site-title Radhika Kolathumani
-                    img(src="path1.png" class="img-responsive process_diagram")
+                    img(src="path1.png" class="img-fluid process_diagram")
                     //-
                         div(style="position:relative;")
                             canvas(style="border 1px solid white; display:block; width: 100%; margin:0 auto; padding: 0 auto;" id="canvas" height="50px")
