--- a/instapark.jade
+++ b/instapark.jade
@@ -13,11 +13,6 @@ html(lang="en")
 
     body(data-spy="scroll" data-target=".navbar" data-offset="50")
   
-        style.
-            h1, h2, h3 {
-                color: #293E68;
-            }
-
         +banner_mixin(
             pageTitle,
 
@@ -46,7 +41,7 @@ html(lang="en")
                             span.marginnote Talking to friends at other universities, I found out that this issue exists elsewhere as well. For this project I restricted the target audience to University of Michigan community.                        
                             span.marginnote Required technology exists to implement a solution.
                                                 
-                        p Parking is a problem at University of Michigan. During class hours, students and faculty find it hard to find parking inside the campus. Fortunately, however, parking spots do exist &mdash; it is just hard to find them. 
+                        p.firstpara Parking is a problem at University of Michigan. During class hours, students and faculty find it hard to find parking inside the campus. Fortunately, however, parking spots do exist &mdash; it is just hard to find them. 
                         p Add to that, the prices of parking spots vary by place and time of day. This problem is amplified during Michigan events when everybody wants to for example, park close to the stadium. Students who are usually running short on cash have a tough time finding parking. Here too, students are willing to rent out their personal parking spots for additional money during events. 
                         p Unfortunately, no application exists to solve these problems even when all the technology to implement a solution exists. As a student, I was myself frustrated by these problems and thought of building an application to address these needs.
                         p I built a solution to address these needs.
