--- a/common_clickable_image.jade
+++ b/common_clickable_image.jade
@@ -10,17 +10,17 @@ mixin clickable_responsive_image_v4(img_src, style_setting)
         
 
 mixin card(image_src, style_setting, Title, Blurb)
-    - Title = Title || 'Title 1';
-    - Blurb = Blurb || 'Blurb 1';    
-    .card(style="padding:1rem;")
+    - Title = Title || 'Title 1';    
+    .card.card-elt
         +clickable_responsive_image(image_src, style_setting)
         .container-fluid
             .row
                 h3.h3tufte= Title
-                p.ptufte= Blurb    
+                if Blurb
+                    p.ptufte= Blurb    
 
 mixin card_no_title(image_src, style_setting)
-    .card(style="padding:1rem;")
+    .card.card-elt
         +clickable_responsive_image(image_src, style_setting)
 
 mixin card_no_title_v4(image_src, style_setting)
