--- a/tufte2.css
+++ b/tufte2.css
@@ -510,69 +510,116 @@ article {
 @media only screen and (min-width: 1100px) and (max-width: 1920px) {
   /* line 574, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
-    font-size: 15px; } }
+    font-size: 15px; }
+  /* line 578, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .card-row {
+    padding: 1rem; } }
+
+/* line 584, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+.card-elt {
+  padding: 1rem; }
+
+@media only screen and (min-height: 0) and (max-height: 989px) {
+  /* line 589, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  #mobile_checker {
+    display: none; } }
 
 /* @group Mobile, Tablets, Small Computers */
 @media only screen and (min-width: 0) and (max-width: 1099px) {
-  /* line 581, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 596, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 13px; }
-  /* line 588, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article p {
-    width: 100%; }
-  /* line 591, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article p,
-  article footer {
-    width: 100%; }
-  /* line 595, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article pre.code {
-    width: 97%; }
-  /* line 598, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article ul {
-    width: 85%; }
-  /* line 601, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article figure {
-    max-width: 90%; }
   /* line 604, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article figcaption,
-  article figure.fullwidth figcaption {
-    margin-right: 0%;
-    max-width: none; }
-  /* line 609, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article blockquote {
-    margin-left: 1.5em;
-    margin-right: 0em; }
-  /* line 613, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article blockquote p,
-  article blockquote footer {
-    width: 100%; }
-  /* line 617, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article label.margin-toggle:not(.sidenote-number) {
-    display: inline; }
+  .home-project-left {
+    padding: 0 1rem; }
+  /* line 608, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .home-project-right {
+    padding: 0 1rem; }
+  /* line 612, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .home-project-subtitle {
+    font-size: 1.7rem; }
+  /* line 616, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .card-elt {
+    padding: 0.5rem; }
   /* line 620, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article .sidenote,
-  article .marginnote {
-    display: none; }
+  .card-col {
+    padding-bottom: 1rem; }
   /* line 624, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article .margin-toggle:checked + .sidenote,
-  article .margin-toggle:checked + .marginnote {
-    display: block;
-    float: left;
-    left: 1rem;
-    clear: both;
-    width: 95%;
-    margin: 1rem 2.5%;
-    vertical-align: baseline;
-    position: relative; }
-  /* line 635, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article label {
-    cursor: pointer; }
-  /* line 638, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article div.table-wrapper,
-  article table {
-    width: 85%; }
-  /* line 642, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article img {
-    width: 100%; } }
+  .card-row {
+    padding: 0 !important; }
+  /* line 628, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .site-menu {
+    padding-top: 3rem; }
+  /* line 632, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .headline {
+    padding: 5rem 0 !important; }
+  /* line 636, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  article {
+    padding: 0 1rem; }
+    /* line 638, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article p {
+      width: 100%; }
+    /* line 642, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article p + p {
+      margin-top: 1.86rem;
+      text-indent: 0; }
+    /* line 647, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article p,
+    article footer {
+      width: 100%; }
+    /* line 651, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article pre.code {
+      width: 97%; }
+    /* line 656, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article section ul,
+    article section ol {
+      width: 100%; }
+    /* line 662, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article .videowrapper2 {
+      width: 100%; }
+    /* line 667, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article figure {
+      max-width: 90%; }
+    /* line 670, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article figcaption,
+    article figure.fullwidth figcaption {
+      margin-right: 0%;
+      max-width: none; }
+    /* line 675, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article blockquote {
+      margin-left: 1.5em;
+      margin-right: 0em; }
+    /* line 679, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article blockquote p,
+    article blockquote footer {
+      width: 100%; }
+    /* line 683, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article label.margin-toggle:not(.sidenote-number) {
+      display: inline; }
+    /* line 686, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article .sidenote,
+    article .marginnote {
+      display: none; }
+    /* line 690, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article .margin-toggle:checked + .sidenote,
+    article .margin-toggle:checked + .marginnote {
+      display: block;
+      float: left;
+      left: 1rem;
+      clear: both;
+      width: 95%;
+      margin: 1rem 2.5%;
+      vertical-align: baseline;
+      position: relative; }
+    /* line 701, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article label {
+      cursor: pointer; }
+    /* line 704, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article div.table-wrapper,
+    article table {
+      width: 85%; }
+    /* line 708, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article img {
+      width: 100%; } }
 
 /*# sourceMappingURL=tufte2.css.map */
