--- a/work.css
+++ b/work.css
@@ -57,71 +57,70 @@
 .home-project-subtitle {
   font-family: "ff-meta-web-pro", sans-serif;
   padding-bottom: 1rem;
-  line-height: 1.5em;
-  font-weight: 500;
-  font-size: 2.3em; }
+  line-height: 1.4;
+  font-size: 2.3rem; }
 
-/* line 38, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+/* line 36, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
 .step {
   font-family: "ff-meta-web-pro", sans-serif; }
 
-/* line 42, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+/* line 40, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
 .home-project-blurb {
   font-family: "ff-meta-web-pro", sans-serif;
   color: #707070; }
 
-/* line 53, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+/* line 51, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
 .home-project-tags {
   text-transform: uppercase;
   font-family: "ff-meta-web-pro", sans-serif;
   color: #707070; }
 
-/* line 67, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+/* line 65, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
 .project-banner-setting {
   background-size: contain;
   background-repeat: no-repeat;
   position: relative;
   margin-top: 2rem; }
 
-/* line 74, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+/* line 72, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
 .image-container {
   width: 100%; }
 
-/* line 78, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+/* line 76, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
 .center-image {
   float: right;
   height: auto;
   max-width: 100%;
   margin: 0 0 0 auto; }
 
-/* line 85, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+/* line 83, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
 .parallax {
   background-attachment: fixed;
   background-size: auto; }
 
 @media only screen and (min-width: 767px) and (max-width: 1920px) {
-  /* line 91, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+  /* line 89, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
   .home-project-cover {
     height: 940px;
     padding: 0 5%;
     display: flex;
     flex-direction: column;
     justify-content: center; }
-  /* line 99, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+  /* line 97, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
   .home-project-left {
     padding-left: 0;
     padding-right: 5rem; }
-  /* line 104, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+  /* line 102, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
   .home-project-right {
     padding-right: 0; } }
 
 /* @group Mobile */
 @media only screen and (min-width: 0) and (max-width: 769px) {
-  /* line 111, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+  /* line 109, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
   .center-image {
     float: none;
     margin: auto; }
-  /* line 116, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
+  /* line 114, /home/local/ANT/ajgopala/portfolio_new/project_brief.scss */
   .home-project-cover {
     padding-bottom: 3rem;
     padding-top: 3rem; } }
@@ -773,70 +772,117 @@ article {
 @media only screen and (min-width: 1100px) and (max-width: 1920px) {
   /* line 574, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
-    font-size: 15px; } }
+    font-size: 15px; }
+  /* line 578, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .card-row {
+    padding: 1rem; } }
+
+/* line 584, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+.card-elt {
+  padding: 1rem; }
+
+@media only screen and (min-height: 0) and (max-height: 989px) {
+  /* line 589, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  #mobile_checker {
+    display: none; } }
 
 /* @group Mobile, Tablets, Small Computers */
 @media only screen and (min-width: 0) and (max-width: 1099px) {
-  /* line 581, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  /* line 596, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
   html {
     font-size: 13px; }
-  /* line 588, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article p {
-    width: 100%; }
-  /* line 591, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article p,
-  article footer {
-    width: 100%; }
-  /* line 595, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article pre.code {
-    width: 97%; }
-  /* line 598, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article ul {
-    width: 85%; }
-  /* line 601, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article figure {
-    max-width: 90%; }
   /* line 604, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article figcaption,
-  article figure.fullwidth figcaption {
-    margin-right: 0%;
-    max-width: none; }
-  /* line 609, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article blockquote {
-    margin-left: 1.5em;
-    margin-right: 0em; }
-  /* line 613, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article blockquote p,
-  article blockquote footer {
-    width: 100%; }
-  /* line 617, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article label.margin-toggle:not(.sidenote-number) {
-    display: inline; }
+  .home-project-left {
+    padding: 0 1rem; }
+  /* line 608, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .home-project-right {
+    padding: 0 1rem; }
+  /* line 612, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .home-project-subtitle {
+    font-size: 1.7rem; }
+  /* line 616, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .card-elt {
+    padding: 0.5rem; }
   /* line 620, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article .sidenote,
-  article .marginnote {
-    display: none; }
+  .card-col {
+    padding-bottom: 1rem; }
   /* line 624, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article .margin-toggle:checked + .sidenote,
-  article .margin-toggle:checked + .marginnote {
-    display: block;
-    float: left;
-    left: 1rem;
-    clear: both;
-    width: 95%;
-    margin: 1rem 2.5%;
-    vertical-align: baseline;
-    position: relative; }
-  /* line 635, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article label {
-    cursor: pointer; }
-  /* line 638, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article div.table-wrapper,
-  article table {
-    width: 85%; }
-  /* line 642, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
-  article img {
-    width: 100%; } }
+  .card-row {
+    padding: 0 !important; }
+  /* line 628, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .site-menu {
+    padding-top: 3rem; }
+  /* line 632, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  .headline {
+    padding: 5rem 0 !important; }
+  /* line 636, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+  article {
+    padding: 0 1rem; }
+    /* line 638, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article p {
+      width: 100%; }
+    /* line 642, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article p + p {
+      margin-top: 1.86rem;
+      text-indent: 0; }
+    /* line 647, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article p,
+    article footer {
+      width: 100%; }
+    /* line 651, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article pre.code {
+      width: 97%; }
+    /* line 656, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article section ul,
+    article section ol {
+      width: 100%; }
+    /* line 662, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article .videowrapper2 {
+      width: 100%; }
+    /* line 667, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article figure {
+      max-width: 90%; }
+    /* line 670, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article figcaption,
+    article figure.fullwidth figcaption {
+      margin-right: 0%;
+      max-width: none; }
+    /* line 675, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article blockquote {
+      margin-left: 1.5em;
+      margin-right: 0em; }
+    /* line 679, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article blockquote p,
+    article blockquote footer {
+      width: 100%; }
+    /* line 683, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article label.margin-toggle:not(.sidenote-number) {
+      display: inline; }
+    /* line 686, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article .sidenote,
+    article .marginnote {
+      display: none; }
+    /* line 690, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article .margin-toggle:checked + .sidenote,
+    article .margin-toggle:checked + .marginnote {
+      display: block;
+      float: left;
+      left: 1rem;
+      clear: both;
+      width: 95%;
+      margin: 1rem 2.5%;
+      vertical-align: baseline;
+      position: relative; }
+    /* line 701, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article label {
+      cursor: pointer; }
+    /* line 704, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article div.table-wrapper,
+    article table {
+      width: 85%; }
+    /* line 708, /home/local/ANT/ajgopala/portfolio_new/tufte2.scss */
+    article img {
+      width: 100%; } }
 
 /* line 5, /home/local/ANT/ajgopala/portfolio_new/work.scss */
 .work-header {
@@ -858,9 +904,5 @@ article {
 /* line 23, /home/local/ANT/ajgopala/portfolio_new/work.scss */
 .container {
   padding: 2px 16px; }
-
-/* line 29, /home/local/ANT/ajgopala/portfolio_new/work.scss */
-.card-row {
-  padding: 1rem; }
 
 /*# sourceMappingURL=work.css.map */
