change header color to .8 black

--- a/common_head.jade
+++ b/common_head.jade
@@ -23,7 +23,8 @@ mixin head_mixin(PageTitle, is_work)
             link(rel="stylesheet" href="work.css")
             style.
                 h1, h2, h3 {
-                    color: #293E68;
+                    // color: #293E68;
+                    color: rgba(0,0,0,0.8); 
                 }
     
             script.
